I#484 - Camel MIME utils: fix aliasing issue in datetok

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/484
Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/merge_requests/126